--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </head>
     <body>
 	    <div class="container my_text" align="center">
-	        <h1 style="color:brown;"> Listen to Interpret: Post-hoc Interpretability of Audio Networks with NMF </h1>
-		<p style="color:darkblue;">Project Webpage (Accepted at NeurIPS'22)</p>
+	        <h1 style="color:brown;"> Tackling Interpretability in Audio Classification Networks with Non-negative Matrix Factorization </h1>
+		<p style="color:darkblue;">TASLP submission page</p>
 	    </div>
 		
 		<h2 style="color:brown;" id='code' align="center"> Abstract </h2>
