--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </li> <br>
                     <li> <a class="active" href="#sonyc_ust">SONYC-UST examples</a> </li> <br>
                     <li> <a class="active" href="#openmic">OpenMIC-2018 examples</a> </li> <br>
-                    <li> <a class="active" href="#baselines">Baselines</a> </li>
+                    <li> <a class="active" href="appendix.pdf">Supplementary discussion</a> </li>
                 </ul>
 		
 		
